# Vision-E17

./: ..gitignore.swp  .gitignore
.gitignore/: .gitignore
Exercises (Anders)/: lort
Exercises (Anders)/Ex1/src/: DisplayImage.cpp
Exercises (Anders)/Ex10/: CMakeLists.txt
Exercises (Anders)/Ex10/src/: Exercise_10.cpp
Exercises (Anders)/Ex11/: CMakeLists.txt
Exercises (Anders)/Ex11/src/: Exercise_11.cpp
Exercises (Anders)/Ex2/: CMakeLists.txt
Exercises (Anders)/Ex2/src/: Exercise_2.cpp
Exercises (Anders)/Ex3/: CMakeLists.txt
Exercises (Anders)/Ex3/src/: Exercise_3.cpp
Exercises (Anders)/Ex4/: CMakeLists.txt
Exercises (Anders)/Ex4/src/: Exercise_4.cpp
Exercises (Anders)/Ex6/: CMakeLists.txt
Exercises (Anders)/Ex6/src/: Exercise_6.cpp
Exercises (Anders)/Ex7/: CMakeLists.txt
Exercises (Anders)/Ex7/src/: Exercise_7.cpp
Exercises (Anders)/Ex8/: CMakeLists.txt
Exercises (Anders)/Ex8/src/: Exercise_8.cpp
Exercises (Anders)/OpticalNumberRecognition-master/: CMakeLists.txt
Exercises (Anders)/OpticalNumberRecognition-master/src/: 05simpleOCR.cpp
Exercises (Anders)/build-visionApp-Desktop-Debug/: Makefile  moc_mainwindow.cpp  ui_mainwindow.h  visionApp
Exercises (Anders)/finalProjectMarker3/: CMakeLists.txt  marker3HardTime.csv  marker3HardTimeOld.csv  marker3Time.csv  runMarkerTest  runMarkerTestHard
Exercises (Anders)/finalProjectMarker3/src/: marker3.cpp
Exercises (Anders)/finalProjectVision/: CMakeLists.txt  HSV_settings.txt  marker1Time.csv  marker1TimeHard.csv  runMarkerTest  runMarkerTestHard  runMarkerTestHardTime  runMarkerTestTime
Exercises (Anders)/finalProjectVision/src/: visionFinal.cpp
Exercises (Anders)/visionApp/: mainwindow.cpp  mainwindow.h  mainwindow.ui  visionApp.pro
Exercises (Greger)/Exercise1/: CMakeLists.txt
Exercises (Greger)/Lecture3/: CMakeLists.txt
Exercises (Greger)/Lecture3/src/: Exercise1.cpp  Lecture3.cpp  test.cpp
Exercises (Greger)/Lecture4/: CMakeLists.txt
Exercises (Greger)/Lecture4/src/: Lecture4.cpp
Exercises (Greger)/calcNCoins/: CMakeLists.txt
Exercises (Greger)/calcNCoins/src/: calcCoins.cpp
Mini-project/: ReadMe  ToDo.txt
Mini-project/FunctionalitySrc/Analysis/: CMakeLists.txt
Mini-project/FunctionalitySrc/Analysis/src/: freq.cpp  hist.cpp
Mini-project/Functions/: builder
Mini-project/Functions/Analysis/: builder  freq  hist
Mini-project/Functions/Processing/: freqFilt  max  mean  median
Mini-project/Functions/src/: CMakeLists.txt
Mini-project/Functions/src/Analysis/: CMakeLists.txt  freq.cpp  hist.cpp
Mini-project/Functions/src/AnalysisSrc/: freq.cpp  hist.cpp
Mini-project/Functions/src/Processing/: freqFilt.cpp  mean.cpp  median.cpp
Mini-project/Functions/src/ProcessingSrc/: adaptiveMedian.cpp  bilateral.cpp  freqFilt.cpp  max.cpp  median.cpp  midpoint.cpp
Mini-project/Images/Image1/: analyse  postAnalyse  process
Mini-project/Images/Image2/: analyse  process
Mini-project/Images/Image3/: analyse  postAnalyse  process
Mini-project/Images/Image4/: analyse_1  analyse_2
Mini-project/Images/Image4_1/: analyse
Mini-project/Images/Image4_2/: analyse  process
