cmake_minimum_required(VERSION 2.8.11)
project(OpticalNumberRec)
set(CMAKE_CXX_STANDARD 11)
find_package(OpenCV 3 REQUIRED)
add_executable(01 src/01locateContours.cpp)
target_link_libraries(01 ${OpenCV_LIBS})
add_executable(02 src/02contourFeatures.cpp)
target_link_libraries(02 ${OpenCV_LIBS})
add_executable(03 src/03circleFinder.cpp)
target_link_libraries(03 ${OpenCV_LIBS})
add_executable(04 src/04huMoments.cpp)
target_link_libraries(04 ${OpenCV_LIBS})
add_executable(05 src/05simpleOCR.cpp)
target_link_libraries(05 ${OpenCV_LIBS})
add_executable(06 src/06digitFeatures.cpp)
target_link_libraries(06 ${OpenCV_LIBS})
add_executable(07 src/07featureCollections.cpp)
target_link_libraries(07 ${OpenCV_LIBS})
add_executable(08 src/08simpleOCR.cpp)
target_link_libraries(08 ${OpenCV_LIBS})
