cmake_minimum_required(VERSION 2.8.11)
project(Functions)
find_package(OpenCV 3 REQUIRED)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/../Analysis)
add_executable(hist AnalysisSrc/hist.cpp)
add_executable(freq AnalysisSrc/freq.cpp)
target_link_libraries(hist ${OpenCV_LIBS})
target_link_libraries(freq ${OpenCV_LIBS})

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/../Processing)
add_executable(median ProcessingSrc/median.cpp)
add_executable(adaptiveMedian ProcessingSrc/adaptiveMedian.cpp)
add_executable(mean ProcessingSrc/mean.cpp)
add_executable(max ProcessingSrc/max.cpp)
add_executable(freqFilt ProcessingSrc/freqFilt.cpp)
add_executable(midpoint ProcessingSrc/midpoint.cpp)
add_executable(bilateral ProcessingSrc/bilateral.cpp)
target_link_libraries(median ${OpenCV_LIBS})
target_link_libraries(adaptiveMedian ${OpenCV_LIBS})
target_link_libraries(mean ${OpenCV_LIBS})
target_link_libraries(max ${OpenCV_LIBS})
target_link_libraries(freqFilt ${OpenCV_LIBS})
target_link_libraries(midpoint ${OpenCV_LIBS})
target_link_libraries(bilateral ${OpenCV_LIBS})
